# boids

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/boids/: __init__.py  __main__.py  animation.py  cli.py  model.py
